[gd_scene load_steps=3 format=3 uid="uid://cwtv05flf441j"]

[ext_resource type="Script" path="res://src/BounceEnemy.gd" id="1_wet7y"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6vwvq"]

[node name="BounceEnemy" type="CharacterBody2D"]
script = ExtResource("1_wet7y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="AnimatedSprite2D"]

[node name="BounceArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceArea"]

[node name="PainArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PainArea"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Direction" type="Node2D" parent="."]
show_behind_parent = true
material = SubResource("CanvasItemMaterial_6vwvq")

[node name="OnEdgeRay" type="RayCast2D" parent="Direction"]
position = Vector2(10.2569, 0.0743256)
target_position = Vector2(0, 20)

[connection signal="body_entered" from="BounceArea" to="." method="_on_bounce_area_body_entered"]
